tests/miniJava/neg/000491_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { class while ( 0 ) { } } }
